# adore_if_carla

./: .ci  .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  adore_if_carla.mk  ci.env  docker-compose.yaml  install_nvidia_docker2.sh  ros-bridge_install_dependencies.patch  run_1_carla.sh  run_2_carla_ros_bridge.sh  run_3_adore_if_carla.sh
.github/workflows/: ci.yaml  space_check.yaml  test.yaml
adore_if_carla/: CMakeLists.txt  README.md  package.xml
adore_if_carla/src/: ackermanncommand2carla.cpp  clock2simtime.cpp  controlcommand2carla.cpp  objects2adore.cpp  plot_longitudinal_control_info.cpp  vehiclestate2adore.cpp
docker/: Dockerfile.adore_if_carla  Dockerfile.ros-bridge
files/: requirements.adore_if_carla.build.ubuntu20.04.system
launch/: demo014_adore_if_carla_part.launch
launchfiles/: demo014_adore_if_carla_part.launch
ros-bridge_files/local/: carla_rosbridge_with_cybertruck_as_ego_vehicle.launch  objects.json  settings.ros1.yaml
